k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${K8S_NAMESPACE}
  labels:
    app.kubernetes.io/name: ${K8S_NAMESPACE}
    app.kubernetes.io/managed-by: kubectl
