k8s/base/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: ${K8S_NAMESPACE}
  labels:
    app: keycloak
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: keycloak
